fixing type big

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Amin Shamouni (https://shamouni.github.io)",
   "license": "MIT",
   "private": false,
-  "version": "0.0.4",
+  "version": "0.0.8",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
@@ -25,6 +25,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shamouni/reactjs-calendar-date-picker.git"
+  },
   "keywords": [
     "React calendar date picker",
     "Calendar",
@@ -40,8 +44,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "reactjs-calendar-date-picker": "^0.0.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
